--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>{% block title %}User Vault{% endblock %}</title>
     <!-- botstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- custom css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
@@ -31,16 +31,16 @@
         </div>
     </main>
 
-    <!-- Footer -->
+    <!--footer -->
     <footer class="bg-dark text-white text-center py-3 mt-auto">
         <div class="container">
-            &copy; {{ now.year }} User Vault
+            &copy; User Vault
         </div>
     </footer>
 
-    <!-- Bootstrap JS Bundle with Popper -->
+    <!-- bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
+    <!-- custom JS -->
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
