--- a/app/templates/layouts/nav.html
+++ b/app/templates/layouts/nav.html
@@ -1,11 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('home.index') }}">Use Vault</a>
+        <a class="navbar-brand" href="{{ url_for('home.dashboard') }}">User Vault</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="darkModeToggle">
+                        <label class="form-check-label text-white" for="darkModeToggle">Dark Mode</label>
+                    </div>
+                </li>
                 {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('home.dashboard') }}">Dashboard</a>
