--- a/app/templates/home/_activity_partial.html
+++ b/app/templates/home/_activity_partial.html
@@ -1,6 +1,6 @@
 <div class="list-group list-group-flush">
     {% for activity in recent_activity %}
-    <div class="list-group-item d-flex justify-content-between align-items-start">
+    <div class="list-group-item d-flex justify-content-between align-items-start dark-mode-compatible">
         <div class="ms-2 me-auto">
             <div class="fw-bold">{{ activity.type }}</div>
             {{ activity.description }}
