--- a/app/templates/layouts/nav.html
+++ b/app/templates/layouts/nav.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <div class="form-check form-switch">
+                    <div class="mt-2 px-4 form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="darkModeToggle">
                         <label class="form-check-label text-white" for="darkModeToggle">Dark Mode</label>
                     </div>
@@ -17,7 +17,7 @@
                         <a class="nav-link" href="{{ url_for('home.dashboard') }}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                        <a class="nav-link" href="{{ url_for('auth.logout') }}?next={{ url_for('home.index') }}">Logout</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
